plugins/javaFX/testData/highlighting/imageIcon.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.layout.*?>
<?import javafx.scene.image.*?>

<AnchorPane xmlns:fx="http://javafx.com/fxml">
  <children>
    <ImageView>
      <image>
        <Image url="@appIcon.png"/>
      </image>
    </ImageView>
    <ImageView>
      <image>
        <Image url="appIcon.png"/>
      </image>
    </ImageView>
    <ImageView>
      <image>
        <Image url="@<error descr="Cannot resolve file 'unknownIcon.png'">unknownIcon.png</error>"/>
      </image>
    </ImageView>
  </children>
</AnchorPane>
